# my-game

./: .gitignore  AGENTS.md  GOALS.md  README.md  acore_protocol.gdextension  main.tscn  open-azerothcore-companion-in-godot.desktop  open-frostbound-in-godot.desktop  project.godot  push-to-github.desktop  run-azerothcore-companion.desktop  run-frostbound.desktop
docs/: agent-coordination-requests.md  asset-handling-policy.md  client-feature-parity-matrix.md  command-layer.md  controls.md  gameplay-sandbox.md  godot-as-engine-roadmap.md  godot-azerothcore-wotlk-master-plan.md  godot-troubleshooting.md  host-control-bridge.md  local-ai-resources.md  local-blizzard-file-authorization.md  local-runtime-repairs.md  local-server-smoke-profile.md  location-notes.md  multiplayer-sandbox.md  object-visibility.md  persistence-layer.md  playable-toolchain.md  read-only-data-browser.md  runtime-data-extraction-plan.md  server-stack-discovery-summary.md  task-log.md  toolchain-and-client-audit-summary.md  ui-parity-worklog.md  wotlk_client_parity_engine_spec.md
native/godot_protocol_extension/: CMakeLists.txt  README.md
native/godot_protocol_extension/src/: acore_protocol_client.cpp  acore_protocol_client.h  register_types.cpp  register_types.h
native/protocol_client/: CMakeLists.txt  README.md
native/protocol_client/src/: arc4.cpp  arc4.h  auth_crypt.cpp  auth_crypt.h  main.cpp  protocol_bytes.cpp  protocol_bytes.h  protocol_c_api.cpp  protocol_c_api.h  protocol_flow.cpp  protocol_flow.h  srp6.cpp  srp6.h  world_packets.cpp  world_packets.h
scenes/: auction_house_view.tscn  aura_view.tscn  character_select_view.tscn  death_respawn_view.tscn  enter_world_view.tscn  floating_text.tscn  game_login_view.tscn  gameplay_sandbox.tscn  group_view.tscn  guild_view.tscn  interaction_combat_view.tscn  mailbox_view.tscn  main.tscn  minimap_view.tscn  movement_reconciliation_view.tscn  multiplayer_sandbox.tscn  object_visibility_view.tscn  quest_view.tscn  questgiver_view.tscn  settings_view.tscn  stage16_action_bar_view.tscn  stage16_chat_view.tscn  stage16_spell_cast_view.tscn  stage16_spellbook_view.tscn  stage17_inventory_view.tscn  stage17_loot_view.tscn  stage17_questgiver_accept_view.tscn  stage17_questgiver_reward_view.tscn  stage17_questgiver_turnin_view.tscn  stage17_questgiver_view.tscn  stage17_trainer_view.tscn  stage17_vendor_view.tscn  tooltip_view.tscn  trade_view.tscn  ui_customizer_view.tscn  world_session_view.tscn
scripts/: ability_cooldowns.gd  auction_house_view.gd  aura_view.gd  camera_controller.gd  character_select_view.gd  client_object_manager.gd  companion_dashboard.gd  death_respawn_view.gd  enter_world_view.gd  entity_stats.gd  floating_text.gd  game_login_view.gd  gameplay_sandbox.gd  group_view.gd  guild_view.gd  hud.gd  interaction_combat_view.gd  live_quest_log_panel.gd  mailbox_view.gd  minimap_view.gd  movement_reconciliation_view.gd  multiplayer_sandbox.gd  object_visibility_view.gd  open_editor.sh  player_controller.gd  protocol_client_bridge.gd  push_unpushed_commits.sh  quest_npc.gd  quest_view.gd  questgiver_view.gd  run_game.sh  sandbox.gd  session_context.gd  settings_runtime.gd  settings_view.gd  stage16_action_bar_view.gd  stage16_chat_view.gd  stage16_spell_cast_view.gd  stage16_spellbook_view.gd  stage17_inventory_view.gd  (+17 more)
tools/: README.md  audit_azerothcore_db.py  audit_server_stack.py  audit_toolchain.py  bridge_client.py  build_godot_protocol_build_image.sh  build_godot_protocol_extension_compat.sh  check_playable_toolchain.sh  client_manifest_scan.py  enter_world_bridge_smoke.gd  godot_protocol_extension_smoke.gd  host_control_bridge.py  live_quest_log_panel_smoke.gd  movement_bridge_smoke.gd  (+14 more)
(+31 files in other folders)
